# Mental_Health_Survey_Analysis

./: README.md  pyproject.toml
.github/workflows/: ruff.yml
src/: app.py
src/pages/: streamilt-form.py  streamlit-dashboard.py
src/util/: supabase-script.py
